; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/kernel/extr_tiocx.c_cx_device_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/kernel/extr_tiocx.c_cx_device_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.cx_device_id = type { i32 }
%struct.cx_drv = type { i32 (%struct.cx_dev*, %struct.cx_device_id.0*)*, i32 }
%struct.cx_dev = type opaque
%struct.cx_device_id.0 = type opaque
%struct.cx_dev.1 = type { %struct.cx_drv* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @cx_device_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx_device_probe(%struct.device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.cx_device_id*, align 8
  %5 = alloca %struct.cx_drv*, align 8
  %6 = alloca %struct.cx_dev.1*, align 8
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %3, align 8
  %8 = load %struct.device*, %struct.device** %3, align 8
  %9 = getelementptr inbounds %struct.device, %struct.device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.cx_drv* @to_cx_driver(i32 %10)
  store %struct.cx_drv* %11, %struct.cx_drv** %5, align 8
  %12 = load %struct.device*, %struct.device** %3, align 8
  %13 = call %struct.cx_dev.1* @to_cx_dev(%struct.device* %12)
  store %struct.cx_dev.1* %13, %struct.cx_dev.1** %6, align 8
  store i32 0, i32* %7, align 4
  %14 = load %struct.cx_dev.1*, %struct.cx_dev.1** %6, align 8
  %15 = getelementptr inbounds %struct.cx_dev.1, %struct.cx_dev.1* %14, i32 0, i32 0
  %16 = load %struct.cx_drv*, %struct.cx_drv** %15, align 8
  %17 = icmp ne %struct.cx_drv* %16, null
  br i1 %17, label %49, label %18

18:                                               ; preds = %1
  %19 = load %struct.cx_drv*, %struct.cx_drv** %5, align 8
  %20 = getelementptr inbounds %struct.cx_drv, %struct.cx_drv* %19, i32 0, i32 0
  %21 = load i32 (%struct.cx_dev*, %struct.cx_device_id.0*)*, i32 (%struct.cx_dev*, %struct.cx_device_id.0*)** %20, align 8
  %22 = icmp ne i32 (%struct.cx_dev*, %struct.cx_device_id.0*)* %21, null
  br i1 %22, label %23, label %49

23:                                               ; preds = %18
  %24 = load %struct.cx_drv*, %struct.cx_drv** %5, align 8
  %25 = getelementptr inbounds %struct.cx_drv, %struct.cx_drv* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.cx_dev.1*, %struct.cx_dev.1** %6, align 8
  %28 = call %struct.cx_device_id* @cx_device_match(i32 %26, %struct.cx_dev.1* %27)
  store %struct.cx_device_id* %28, %struct.cx_device_id** %4, align 8
  %29 = load %struct.cx_device_id*, %struct.cx_device_id** %4, align 8
  %30 = icmp ne %struct.cx_device_id* %29, null
  br i1 %30, label %31, label %48

31:                                               ; preds = %23
  %32 = load %struct.cx_drv*, %struct.cx_drv** %5, align 8
  %33 = getelementptr inbounds %struct.cx_drv, %struct.cx_drv* %32, i32 0, i32 0
  %34 = load i32 (%struct.cx_dev*, %struct.cx_device_id.0*)*, i32 (%struct.cx_dev*, %struct.cx_device_id.0*)** %33, align 8
  %35 = load %struct.cx_dev.1*, %struct.cx_dev.1** %6, align 8
  %36 = bitcast %struct.cx_dev.1* %35 to %struct.cx_dev*
  %37 = load %struct.cx_device_id*, %struct.cx_device_id** %4, align 8
  %38 = bitcast %struct.cx_device_id* %37 to %struct.cx_device_id.0*
  %39 = call i32 %34(%struct.cx_dev* %36, %struct.cx_device_id.0* %38)
  store i32 %39, i32* %7, align 4
  %40 = icmp slt i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %31
  %42 = load i32, i32* %7, align 4
  store i32 %42, i32* %2, align 4
  br label %51

43:                                               ; preds = %31
  %44 = load %struct.cx_drv*, %struct.cx_drv** %5, align 8
  %45 = load %struct.cx_dev.1*, %struct.cx_dev.1** %6, align 8
  %46 = getelementptr inbounds %struct.cx_dev.1, %struct.cx_dev.1* %45, i32 0, i32 0
  store %struct.cx_drv* %44, %struct.cx_drv** %46, align 8
  br label %47

47:                                               ; preds = %43
  br label %48

48:                                               ; preds = %47, %23
  br label %49

49:                                               ; preds = %48, %18, %1
  %50 = load i32, i32* %7, align 4
  store i32 %50, i32* %2, align 4
  br label %51

51:                                               ; preds = %49, %41
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local %struct.cx_drv* @to_cx_driver(i32) #1

declare dso_local %struct.cx_dev.1* @to_cx_dev(%struct.device*) #1

declare dso_local %struct.cx_device_id* @cx_device_match(i32, %struct.cx_dev.1*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
